Get the backend facade creating poros for our frontend to utilize
Co-authored-by: Ben Fulton <63377504+b-enji-cmd@users.noreply.github.com>
Co-authored-by: Jake Volpe <62768837+javolpe@users.noreply.github.com>
Co-authored-by: Jesus Quezada-Guillen <17693874+jequeza@users.noreply.github.com>
Co-authored-by: Joseph Budina <52386927+josephbudina@users.noreply.github.com>
Co-authored-by: Khoa Nguyen <46826902+Omegaeye@users.noreply.github.com>
Co-authored-by: Kris Litman <56943408+krislitman@users.noreply.github.com>
Co-authored-by: Kyle Schulz <54863905+kylejschulz@users.noreply.github.com>

--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_profile_search.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_profile_search.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3001/api/v1/profile/1/tags
+    uri: http://localhost:3001/api/v1/profiles/1/search?medium=painter%20man
     body:
       encoding: US-ASCII
       string: ''
@@ -15,23 +15,21 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 200
-      message: OK
+      code: 400
+      message: Bad Request
     headers:
       Content-Type:
       - application/json; charset=utf-8
-      Etag:
-      - W/"431f28e382cb4969305146b6f1f3d405"
       Cache-Control:
-      - max-age=0, private, must-revalidate
+      - no-cache
       X-Request-Id:
-      - add81f42-bb2a-4f97-8176-38db0a87e2ae
+      - c39f120e-cac6-4952-88cf-611af76f8d57
       X-Runtime:
-      - '0.005745'
+      - '0.006198'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":[{"id":"6","type":"tag","attributes":{"name":"Painter"}},{"id":"8","type":"tag","attributes":{"name":"Sculpter"}}]}'
-  recorded_at: Sun, 18 Apr 2021 20:16:37 GMT
+      string: '{"data":{},"error":"invalid parameters"}'
+  recorded_at: Sun, 18 Apr 2021 21:17:21 GMT
 recorded_with: VCR 6.0.0
