--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_profile_search_radius.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_profile_search_radius.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3001/api/v1/profiles/1/circle
+    uri: http://localhost:3001/api/v1/profiles/1/search?radius=10
     body:
       encoding: US-ASCII
       string: ''
@@ -21,18 +21,18 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"6e55a6aa79081d4b65e8ea4ee75b5d90"
+      - W/"4804fb2d454af363fe8f4e8f158d1cae"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - bffd0e88-e7ff-44c6-bd8e-1d60fbb36eac
+      - a4bcc6e2-b6ee-465f-ba7f-36596d2453dd
       X-Runtime:
-      - '0.005249'
+      - '1.935988'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"7","type":"profile","attributes":{"zipcode":"80305","user_id":2,"profile_picture":"http://www.google.com","username":"korn"}},{"id":"8","type":"profile","attributes":{"zipcode":"80304","user_id":3,"profile_picture":"http://www.google.com","username":"slipknot"}},{"id":"9","type":"profile","attributes":{"zipcode":"80303","user_id":4,"profile_picture":"http://www.google.com","username":"photos
-        by jim"}},{"id":"10","type":"profile","attributes":{"zipcode":"80544","user_id":5,"profile_picture":"http://www.google.com","username":"arteest"}}]}'
-  recorded_at: Sun, 18 Apr 2021 20:16:37 GMT
+        by jim"}},{"id":"10","type":"profile","attributes":{"zipcode":"80544","user_id":5,"profile_picture":"http://www.google.com","username":"arteest"}},{"id":"12","type":"profile","attributes":{"zipcode":"80302","user_id":6,"profile_picture":"http://www.google.com","username":"username"}}]}'
+  recorded_at: Sun, 18 Apr 2021 21:33:44 GMT
 recorded_with: VCR 6.0.0
