--- a/spec/fixtures/vcr_cassettes/Profile_Page/profile_route/shows_other_profiles.yml
+++ b/spec/fixtures/vcr_cassettes/Profile_Page/profile_route/shows_other_profiles.yml
@@ -2,137 +2,13 @@
 http_interactions:
 - request:
     method: post
-    uri: https://lit-atoll-80185.herokuapp.com/api/v1/photos
+    uri: http://localhost:3001/api/v1/profiles?profile_picture=name&user_id=404&username&zipcode=8111
     body:
       encoding: UTF-8
       string: ''
     headers:
       User-Agent:
-      - Faraday v1.3.0
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 404
-      message: Not Found
-    headers:
-      Server:
-      - Cowboy
-      Date:
-      - Sat, 17 Apr 2021 17:15:07 GMT
-      Connection:
-      - keep-alive
-      Content-Type:
-      - text/html; charset=UTF-8
-      X-Request-Id:
-      - 6c01c3da-51d6-43cf-823e-4b7a9153c66e
-      X-Runtime:
-      - '0.002247'
-      Content-Length:
-      - '0'
-      Via:
-      - 1.1 vegur
-    body:
-      encoding: UTF-8
-      string: ''
-  recorded_at: Sat, 17 Apr 2021 17:15:07 GMT
-- request:
-    method: get
-    uri: https://lit-atoll-80185.herokuapp.com/api/v1/distance?current_user=10000002&user=10000002
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.3.0
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Server:
-      - Cowboy
-      Date:
-      - Sat, 17 Apr 2021 17:15:08 GMT
-      Connection:
-      - keep-alive
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"1f76e91028fbb6d3dcccb3be7352576f"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 94528385-59d4-4559-b015-289dd75ac9a5
-      X-Runtime:
-      - '0.536954'
-      Transfer-Encoding:
-      - chunked
-      Via:
-      - 1.1 vegur
-    body:
-      encoding: UTF-8
-      string: '{"data":0}'
-  recorded_at: Sat, 17 Apr 2021 17:15:08 GMT
-- request:
-    method: get
-    uri: https://lit-atoll-80185.herokuapp.com/api/v1/distance?current_user=10000002&user=10000001
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.3.0
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Server:
-      - Cowboy
-      Date:
-      - Sat, 17 Apr 2021 17:15:08 GMT
-      Connection:
-      - keep-alive
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"0796fb69546a910ad9dfda60fc382b8f"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 753c0f12-19c5-44a7-9263-a1977814ad27
-      X-Runtime:
-      - '0.846956'
-      Transfer-Encoding:
-      - chunked
-      Via:
-      - 1.1 vegur
-    body:
-      encoding: UTF-8
-      string: '{"data":11.51}'
-  recorded_at: Sat, 17 Apr 2021 17:15:09 GMT
-- request:
-    method: post
-    uri: http://localhost:3001/api/v1/profiles?user_id=615&zipcode=8111
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.3.0
+      - Faraday v1.4.1
       Content-Length:
       - '0'
       Accept-Encoding:
@@ -151,269 +27,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 57c33a54-400f-484a-9da2-03ebc2e8c107
+      - 38c71b3e-d877-47be-a568-71651ffc1de5
       X-Runtime:
-      - '0.016320'
+      - '0.009757'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 16:27:21 GMT
-- request:
-    method: post
-    uri: http://localhost:3001/api/v1/profiles?user_id=654&zipcode=8111
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.3.0
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 201
-      message: Created
-    headers:
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - f5aebcce-fe30-47fb-a9f5-fbc5e3382812
-      X-Runtime:
-      - '0.009144'
-      Transfer-Encoding:
-      - chunked
-    body:
-      encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 16:29:12 GMT
-- request:
-    method: post
-    uri: https://lit-atoll-80185.herokuapp.com/api/v1/profiles?user_id=693&zipcode=8111
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.3.0
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 201
-      message: Created
-    headers:
-      Server:
-      - Cowboy
-      Date:
-      - Sun, 18 Apr 2021 16:30:09 GMT
-      Connection:
-      - keep-alive
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - efcf637d-a0b6-4704-b94a-ada399c8a7ef
-      X-Runtime:
-      - '0.048417'
-      Transfer-Encoding:
-      - chunked
-      Via:
-      - 1.1 vegur
-    body:
-      encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 16:30:10 GMT
-- request:
-    method: post
-    uri: https://lit-atoll-80185.herokuapp.com/api/v1/profiles?user_id=732&zipcode=8111
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.3.0
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 201
-      message: Created
-    headers:
-      Server:
-      - Cowboy
-      Date:
-      - Sun, 18 Apr 2021 16:30:44 GMT
-      Connection:
-      - keep-alive
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 4b404228-a753-428e-bba8-8992813ae159
-      X-Runtime:
-      - '0.041075'
-      Transfer-Encoding:
-      - chunked
-      Via:
-      - 1.1 vegur
-    body:
-      encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 16:30:44 GMT
-- request:
-    method: post
-    uri: https://lit-atoll-80185.herokuapp.com/api/v1/profiles?user_id=771&zipcode=8111
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.3.0
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 201
-      message: Created
-    headers:
-      Server:
-      - Cowboy
-      Date:
-      - Sun, 18 Apr 2021 16:33:10 GMT
-      Connection:
-      - keep-alive
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - b1e8055b-6387-4734-89b5-53c9563e0971
-      X-Runtime:
-      - '0.045869'
-      Transfer-Encoding:
-      - chunked
-      Via:
-      - 1.1 vegur
-    body:
-      encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 16:33:11 GMT
-- request:
-    method: post
-    uri: https://lit-atoll-80185.herokuapp.com/api/v1/profiles?user_id=810&zipcode=8111
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.3.0
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 201
-      message: Created
-    headers:
-      Server:
-      - Cowboy
-      Date:
-      - Sun, 18 Apr 2021 16:36:32 GMT
-      Connection:
-      - keep-alive
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 1ccf9e2d-ca14-4167-9b6d-c5bac1b65ebf
-      X-Runtime:
-      - '0.044249'
-      Transfer-Encoding:
-      - chunked
-      Via:
-      - 1.1 vegur
-    body:
-      encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 16:36:32 GMT
-- request:
-    method: post
-    uri: https://lit-atoll-80185.herokuapp.com/api/v1/profiles?user_id=849&zipcode=8111
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.3.0
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 201
-      message: Created
-    headers:
-      Server:
-      - Cowboy
-      Date:
-      - Sun, 18 Apr 2021 17:08:31 GMT
-      Connection:
-      - keep-alive
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - d617736d-3427-4dd4-8e29-13fdf83997a1
-      X-Runtime:
-      - '0.024847'
-      Transfer-Encoding:
-      - chunked
-      Via:
-      - 1.1 vegur
-    body:
-      encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 17:08:32 GMT
+  recorded_at: Sun, 18 Apr 2021 20:22:28 GMT
 recorded_with: VCR 6.0.0
