--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_distance.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_distance.yml
@@ -1,39 +1,37 @@
 ---
 http_interactions:
 - request:
-    method: post
-    uri: http://localhost:3001/api/v1/profiles?profile_picture=name&user_id=398&username&zipcode=8111
+    method: get
+    uri: http://localhost:3001/api/v1/distance?current_user=1&user=2
     body:
-      encoding: UTF-8
+      encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
       - Faraday v1.4.1
-      Content-Length:
-      - '0'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
   response:
     status:
-      code: 201
-      message: Created
+      code: 200
+      message: OK
     headers:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
+      - W/"80bfe6560f8d0c791611233fdbb16307"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 9129428f-1450-4a85-9840-6bc7141165ef
+      - 9b45e96c-2dd4-4e54-ac97-2e582baa9101
       X-Runtime:
-      - '0.009387'
+      - '0.779346'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 20:22:28 GMT
+      string: '{"data":5.19}'
+  recorded_at: Sun, 18 Apr 2021 20:59:33 GMT
 recorded_with: VCR 6.0.0
