--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_user.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_user.yml
@@ -1,39 +1,38 @@
 ---
 http_interactions:
 - request:
-    method: post
-    uri: http://localhost:3001/api/v1/profiles?profile_picture=name&user_id=398&username&zipcode=8111
+    method: get
+    uri: http://localhost:3001/api/v1/profiles/1
     body:
-      encoding: UTF-8
+      encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
       - Faraday v1.4.1
-      Content-Length:
-      - '0'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
   response:
     status:
-      code: 201
-      message: Created
+      code: 200
+      message: OK
     headers:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
+      - W/"ee2dbbfdd216341bf42396a125d2fe61"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 9129428f-1450-4a85-9840-6bc7141165ef
+      - cde23b92-a285-4c5c-a7e2-4c38d49e0b23
       X-Runtime:
-      - '0.009387'
+      - '0.095255'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 20:22:28 GMT
+      string: '{"data":{"id":"6","type":"profile","attributes":{"zipcode":"80301","user_id":1,"profile_picture":"http://www.google.com","username":"the
+        painter man"}}}'
+  recorded_at: Sun, 18 Apr 2021 21:17:20 GMT
 recorded_with: VCR 6.0.0
