--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_post_profile_tag.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_post_profile_tag.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3001/api/v1/profiles?profile_picture=name&user_id=398&username&zipcode=8111
+    uri: http://localhost:3001/api/v1/profile/1/tags?tag_id=6
     body:
       encoding: UTF-8
       string: ''
@@ -23,17 +23,17 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
+      - W/"d0eff6fab224463bc1abbc174e1b9074"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 9129428f-1450-4a85-9840-6bc7141165ef
+      - 9603de9b-f651-4023-b2fe-535fe5023c2f
       X-Runtime:
-      - '0.009387'
+      - '0.017103'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 20:22:28 GMT
+      string: '{"data":"tags successfully created"}'
+  recorded_at: Sun, 18 Apr 2021 21:24:34 GMT
 recorded_with: VCR 6.0.0
