--- a/spec/fixtures/vcr_cassettes/Welcome_Page/When_a_user_visits_the_root_path/redirects_to_register/sad_path.yml
+++ b/spec/fixtures/vcr_cassettes/Welcome_Page/When_a_user_visits_the_root_path/redirects_to_register/sad_path.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3001/api/v1/profiles?profile_picture=name&user_id=398&username&zipcode=8111
+    uri: http://localhost:3001/api/v1/profiles?profile_picture=&user_id=407&username&zipcode=
     body:
       encoding: UTF-8
       string: ''
@@ -17,23 +17,21 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 201
-      message: Created
+      code: 400
+      message: Bad Request
     headers:
       Content-Type:
       - application/json; charset=utf-8
-      Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
       Cache-Control:
-      - max-age=0, private, must-revalidate
+      - no-cache
       X-Request-Id:
-      - 9129428f-1450-4a85-9840-6bc7141165ef
+      - 4bfd53c2-addb-4352-8664-7aaad5809e11
       X-Runtime:
-      - '0.009387'
+      - '0.011486'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Sun, 18 Apr 2021 20:22:28 GMT
+      string: '{"data":{},"error":"invalid parameters"}'
+  recorded_at: Sun, 18 Apr 2021 20:22:29 GMT
 recorded_with: VCR 6.0.0
